[package]
name = "bet-architecture"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bet"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "bet_architecture"
path = "src/lib.rs"

[workspace]
members = ["."]
